@@ -1,10 +1,11 @@
 Changes between 1.4.12 and 1.4.13.dev
 ==================================================
 
+- add paths arguments to py.path.local.sysfind to restrict
+  search to the diretories in the path.
 - add isdir/isfile/islink to path.stat() objects allowing to perform
   multiple checks without calling out multiple times
 - drop py.path.local.__new__ in favour of a simpler __init__
-
 - iniconfig: allow "name:value" settings in config files, no space after
   "name" required
 - fix issue 27 - NameError in unlikely untested case of saferepr
